# TheWineShop

./: docker-compose.yml  nginx.conf  nginx.http.conf  tailwind.config.js
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.local  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025-11-29_2nd_init.py  2025-11-29_init.py  2025-12-05_increase_hashed_password_length.py  2025-12-06_add_cart_and_order_tables.py  2025-12-06_add_product_inventory_and_reviews_tables.py  2025-12-06_middle_name_nullable.py  2025-12-06_middlename_city_nullable_true.py  2025-12-12_reinit_schema.py  2025-12-12_update_cart_logic.py  2025-12-13_add_import_price.py  2025-12-13_update_user_and_order_schema.py  2025-12-14_add_order_discount.py  2025-12-14_fix_review_timezone.py  2025-12-14_fix_timezone_and_schema.py  2025-12-14_update_promotion_model.py  2025-12-14_update_review_model.py  2025-12-20_init.py  2025-12-29_add_chat_messages_table.py  2025-12-29_add_new_table_chat_messages_table.py
backend/src/: chat_router.py  chatbot_router.py  main.py  models.py  promote_admin.py  seed_data.py
backend/src/admin/: router.py
backend/src/ai/: registry.py  router.py  schemas.py  services.py
backend/src/auth/: dependencies.py  exceptions.py  router.py  security.py
backend/src/chat/: manager.py  models.py  router.py
backend/src/core/: aws.py  base_model.py  config.py  constants.py  database.py  email_service.py  exceptions.py  security.py
backend/src/inventory/: router.py  schemas.py
backend/src/media/: router.py
backend/src/order/: discount_service.py  (+3 more)
(+89 files in other folders)
