[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "boto3>=1.40.68",
    "botocore>=1.40.68",
    "fastapi>=0.121.0",
    "fastapi-mail>=1.5.8",
    "genai",
    "google-genai",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
